# linkfixbot

./: Cargo.toml  replacements.txt  run and register globally.bat  run.bat
src/: automatic.rs  context_menu.rs  discord_event_handler.rs  fix_existing_message.rs  fix_link.rs  main.rs  reply_shortcuts.rs  slash_command.rs  strings.rs  util.rs
