[package]
name = "linkfixbot"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.13.0"
serenity = { version = "0.12.4", default-features = false, features = [
	"builder",
	"cache",
	"collector",
	"client",
	"gateway",
	"model",
	"rustls_backend",
	"chrono",
] }
tokio = { version = "1.38.1", features = ["macros", "rt-multi-thread"] }
regex = "1.10.5"